# software_analysis_final_project

./: .cursorrules  .env  .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  README.md  cmake_install.cmake  code_repair.py  compile_commands.json  config.json  dw.py  requirements.txt  run_repair.sh  test_code_fixed.cpp
.cursor/rules/: project.mdc
config/: settings.json
config/prompt_templates/: repair.txt  repair_enhanced.txt  tdd_repair.txt
docs/: README.md  array_bounds_check.md  project proposal.md
examples/src/: CMakeLists.txt  Makefile  calendar_format.h  cmake_install.cmake  config_store.cpp  config_store.h  config_store_memory_leak.cpp  config_store_null_ptr.cpp  config_store_uninit_var.cpp  config_store_uninit_var.h  main.cpp  sample_code.cpp  sample_code13.cpp  sample_code2.cpp  sample_code4.cpp  uninit_var.cpp  uninit_var.h  vector_invalid.cpp  vector_invalid.h
examples/tests/: CMakeLists.txt  test_calendar_format.cpp  test_config_store.cpp  test_config_store_null_ptr.cpp  test_config_store_uninit_var.cpp  test_dangling_pointer.cpp  test_sample_code.cpp  test_uninit_var.cpp
infer-out/: .infer_runstate.json  bugs.txt  logs  report.json  results.db
infer-out/specs/: ConfigStore#ConfigStore#{13136265073623837945}.bf932be5a95d5c0b2f2be9786d0ef862.specs  ConfigValue#ConfigValue#ConfigStore#{16505232969197406471}.99b559192bb07e73811b1a43d483ff04.specs  ConfigValue#ConfigValue#ConfigStore#{3314090376532785340}.cd28b2fcd8aa417ee4b19c16ebb4aeb3.specs  __infer_inner_destructor_~ConfigStore#ConfigStore#(4017736124350882176).1402ec9bb1f3833d936a45c47473aa75.specs  __infer_inner_destructor_~ConfigValue#ConfigValue#ConfigStore#(7176746265388642507).f631185d91b0344cb00d62be468ce6c3.specs  cleanup#ConfigValue#ConfigStore#(7205474131417545528).3288e93bf27dacb66615318b07e48e7a.specs  definite_leak#17277655718152340872.64bd4b9979fc54b293e3b5330f978c12.specs  double_free#14391411484061473128.c672fe3ce23a7d19effdbcd45d4a358e.specs  getFloat#ConfigStore#(5640852323796895752).d34549f70fe9b45b47af640a62acc9a1.specs  getInt#ConfigStore#(10586351257360917791).18f6d571394e8f63f52941db856c2eaf.specs  getString#ConfigStore(class stdbasic_stringchar,stdchar_traitschar,stdallocatorchar)#(18.d6b92acb300aac94c45e4a28255fda28.specs  getVector#ConfigStore(class stdvectorint,stdallocatorint)#(1122654078207302378).387e7fa4ac72ba7e72e76cb2edd87466.specs  (+12 more)
results/: infer_processed.json
run-examples/: CMakeLists.txt
run-examples/src/: CMakeLists.txt  config_store.h  config_store_bug.cpp  config_store_memory_leak.cpp  config_store_memory_leak.h  config_store_null_ptr.cpp  config_store_null_ptr.h  config_store_uninit_var.cpp  dangling_pointer.cpp  dangling_pointer.h  main.cpp  uninit_var.cpp  vector_invalid.cpp
run-examples/src/infer_case/: buffer_overflow.cpp  dangling_pointer.cpp  dangling_pointer_fix.cpp  double_delete.cpp  leak_memory_fix.cpp  maybe_null.cpp  null_dereference.cpp  out_of_bounds.cpp  type_confusion.cpp  uninitialized_variable.cpp  uninitialized_variable_fix.cpp
run-examples/tests/: CMakeLists.txt  README.md  test_config_store.cpp  test_config_store_memory_leak.cpp  test_sample_code.cpp  test_vector_invalid.cpp
src/: sample_code.cpp  test_code.cpp
tests/: test_configstore.cpp
(+42 files in other folders)
